--- a/style.css
+++ b/style.css
@@ -18,3 +18,14 @@ p {
     padding: 0;
     margin: 0;
   }
+.menu-bar
+  {
+     background: rgb(255,255,255)
+     text-algin: center;
+  }
+.menu-bar ul
+{
+  display: inline-flex;
+  list-style: none;
+}
+  
